Add more filters

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -71,11 +71,29 @@ main {
 }
 
 .u-checkbox {
+	position: relative;
 	background-color: white;
 	border: 2px solid var(--gray-600);
 	display: inline-block;
 	height: 1.5em;
 	width: 1.5em;
+}
+
+.u-checkbox:before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	background-color: var(--gray-600);
+	content: "";
+	height: 50%;
+	transform: translate(-50%,-50%);
+	transition: opacity .2s;
+	width: 50%;
+	z-index: 1;
+}
+
+.u-checkbox:not(._selected):before {
+	opacity: 0;
 }
 
 @media (min-width: 768px) {
